--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="ntk_base_logo">@drawable/logo</item>
+        <item name="ntk_splash_background">@drawable/splash</item>
+        <item name="ntk_splash_loading">@raw/loading</item>
+        <item name="ntk_splash_logo">@drawable/logo</item>
+        <item name="ntk_notification_color">@color/colorWhite</item>
     </style>
 
     <style name="NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
