--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,9 @@
         <item name="ntk_splash_loading">@raw/loading</item>
         <item name="ntk_splash_logo">@drawable/logo</item>
         <item name="ntk_notification_color">@color/colorWhite</item>
+        <item name="Theme_NTKIntro">@style/AppTheme</item>
+        <item name="Theme_NTKRegister">@style/AppTheme</item>
+        <item name="Theme_NTKNotification">@style/AppTheme</item>
     </style>
 
     <style name="NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -90,7 +93,6 @@
         <item name="colorControlNormal">@color/colorGrayText</item>
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
-
 
 
 </resources>
