--- a/app/src/main/res/layout/row_recycler_comment.xml
+++ b/app/src/main/res/layout/row_recycler_comment.xml
@@ -40,6 +40,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/likeLinear"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -94,6 +95,19 @@
             </LinearLayout>
 
         </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/relativeLoading"
+            android:layout_width="wrap_content"
+            android:background="#43474747"
+            android:visibility="gone"
+            android:layout_alignRight="@+id/likeLinear"
+            android:layout_alignLeft="@+id/likeLinear"
+            android:layout_height="wrap_content">
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <androidx.cardview.widget.CardView
