--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -46,15 +46,16 @@
         android:layout_height="match_parent"
         android:weightSum="1">
 
+        <View
+            android:layout_width="5dp"
+            android:layout_height="0dp"
+            android:layout_weight=".45" />
 
-<View
-    android:layout_width="5dp"
-    android:layout_height="0dp"
-    android:layout_weight=".45"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-          android:layout_weight=".45"  android:orientation="horizontal"
+            android:layout_weight=".45"
+            android:orientation="horizontal"
             android:padding="16dp">
 
 
