--- a/app/src/main/res/layout/app_base_empty.xml
+++ b/app/src/main/res/layout/app_base_empty.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:visibility="visible">
 
@@ -11,7 +12,6 @@
         android:id="@+id/sub_loading"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_above="@+id/sub_loading_text"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/empty" />
@@ -25,4 +25,14 @@
         android:text="@string/list_is_empty"
         android:textColor="?attr/colorAccent"
         android:textSize="15sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/addNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="32dp"
+        android:text=" جدید  "
+        android:visibility="gone" />
 </LinearLayout>
